deploy/dev/ingress-redirect.yaml
# redirect from www.dev.cjsm.justice.gov.uk to dev.cjsm.justice.gov.uk
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cjsm-dev-www-dev-redirect
  namespace: cjsm-dev
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: cjsm-dev-www-dev-redirect-cjsm-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/permanent-redirect: https://dev.cjsm.justice.gov.uk/
spec:
  ingressClassName: modsec
  tls:
  - hosts:
      - www.dev.cjsm.justice.gov.uk
    secretName: www-dev-cjsm-tls
  rules:
  - host: www.dev.cjsm.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dunno-service
            port: 
              number: 4567
